syntax = "proto3";

package data;

option go_package = "github.com/tafolabi009/backend/proto/data";

// Data Service - Handles dataset storage, retrieval, and metadata management
service DataService {
  // Upload dataset
  rpc UploadDataset(stream UploadDatasetRequest) returns (UploadDatasetResponse);
  
  // Get dataset metadata
  rpc GetDatasetMetadata(GetDatasetRequest) returns (GetDatasetResponse);
  
  // List datasets for a user
  rpc ListDatasets(ListDatasetsRequest) returns (ListDatasetsResponse);
  
  // Delete dataset
  rpc DeleteDataset(DeleteDatasetRequest) returns (DeleteDatasetResponse);
  
  // Get dataset profiling information
  rpc ProfileDataset(ProfileDatasetRequest) returns (ProfileDatasetResponse);
  
  // Stream dataset chunks (for processing)
  rpc StreamDataset(StreamDatasetRequest) returns (stream DatasetChunk);
}

// Upload Dataset (streaming)
message UploadDatasetRequest {
  oneof data {
    DatasetMetadata metadata = 1;
    bytes chunk = 2;
  }
}

message DatasetMetadata {
  string dataset_id = 1;
  string user_id = 2;
  string filename = 3;
  int64 file_size = 4;
  string file_type = 5;  // csv, parquet, hdf5, json, excel
  string storage_path = 6;
  map<string, string> custom_metadata = 7;
}

message UploadDatasetResponse {
  string dataset_id = 1;
  string status = 2;  // success, failed, processing
  string storage_path = 3;
  int64 bytes_uploaded = 4;
  string error_message = 5;
}

// Get Dataset
message GetDatasetRequest {
  string dataset_id = 1;
  string user_id = 2;
}

message GetDatasetResponse {
  Dataset dataset = 1;
  string error_message = 2;
}

message Dataset {
  string id = 1;
  string user_id = 2;
  string filename = 3;
  int64 file_size = 4;
  string file_type = 5;
  string status = 6;  // uploading, processing, ready, failed
  string storage_path = 7;
  DatasetProfile profile = 8;
  string uploaded_at = 9;
  string processed_at = 10;
  map<string, string> metadata = 11;
}

message DatasetProfile {
  int64 row_count = 1;
  int32 column_count = 2;
  repeated ColumnInfo columns = 3;
  DataQuality quality = 4;
  map<string, string> statistics = 5;
}

message ColumnInfo {
  string name = 1;
  string data_type = 2;
  int64 null_count = 3;
  int64 unique_count = 4;
  string min_value = 5;
  string max_value = 6;
  float mean_value = 7;
  float std_dev = 8;
}

message DataQuality {
  float completeness = 1;
  float uniqueness = 2;
  float validity = 3;
  int64 duplicate_rows = 4;
  int64 outlier_count = 5;
  repeated string quality_issues = 6;
}

// List Datasets
message ListDatasetsRequest {
  string user_id = 1;
  int32 page = 2;
  int32 page_size = 3;
  string status_filter = 4;
  string sort_by = 5;  // uploaded_at, file_size, filename
  string sort_order = 6;  // asc, desc
}

message ListDatasetsResponse {
  repeated Dataset datasets = 1;
  Pagination pagination = 2;
  string error_message = 3;
}

message Pagination {
  int32 page = 1;
  int32 page_size = 2;
  int64 total_count = 3;
  int32 total_pages = 4;
}

// Delete Dataset
message DeleteDatasetRequest {
  string dataset_id = 1;
  string user_id = 2;
}

message DeleteDatasetResponse {
  bool success = 1;
  string message = 2;
  string deleted_at = 3;
}

// Profile Dataset
message ProfileDatasetRequest {
  string dataset_id = 1;
  string dataset_path = 2;
  string data_format = 3;
  ProfileConfig config = 4;
}

message ProfileConfig {
  bool calculate_statistics = 1;
  bool detect_data_types = 2;
  bool analyze_quality = 3;
  int32 sample_size = 4;
  repeated string columns_to_profile = 5;
}

message ProfileDatasetResponse {
  string dataset_id = 1;
  DatasetProfile profile = 2;
  string status = 3;
  string error_message = 4;
}

// Stream Dataset
message StreamDatasetRequest {
  string dataset_id = 1;
  string dataset_path = 2;
  string data_format = 3;
  int32 chunk_size = 4;
  int64 start_row = 5;
  int64 end_row = 6;
  repeated string columns = 7;
}

message DatasetChunk {
  int32 chunk_index = 1;
  int64 start_row = 2;
  int64 end_row = 3;
  bytes data = 4;  // Serialized data (e.g., Arrow format)
  bool is_last = 5;
  string error_message = 6;
}
